--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="./script.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+    <script src="funFacts.js"></script>
 
 </head>
 <body>
