Add header mobile design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 <body>
 
   <header>
-    <h1 id="title">Space</h1>
+    <a class="navbar-burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </a>
+    <a class="header__logo">
+      <img class="logo__image" src="assets/images/logo.png">
+      <div class="logo__text">ISS <br>Locator</div>
+    </a>
   </header>
   <nav>
     <div class="container">
