--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="assets\css\style.css">
   <script src="funFacts.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -40,6 +41,11 @@
   <div id="data">
     <h4>data</h4>
   </div>
-
+  <div id="images">
+   <button class="prev">Previous</button>
+      <p>Click a button to load image gallery</p>
+    <button class="next">Next</button>
+    </div>
+<script type="text/javascript" src="script/script.js"></script>
 </body>
 </html>
