Add header desktop design

--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
 <body>
 
   <header>
-    <a class="navbar-burger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </a>
-    <a class="header__logo">
-      <img class="logo__image" src="assets/images/logo.png">
-      <div class="logo__text">ISS <br>Locator</div>
-    </a>
-  </header>
-  <nav>
-    <div class="container">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Fun Page</a>
+    <div class="header__container">
+      <a class="navbar-burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+      <a class="header__logo">
+        <img class="logo__image" src="assets/images/logo.png">
+        <div class="logo__text">ISS <br>Locator</div>
+      </a>
+      <div class="is-hidden-touch">
+        <nav>
           <ul>
-            <li><a href="#">Fun Facts</a></li>
-            <li><a href="#">Soundbites</a></li>
-            <li><a href="#">Trivia</a></li>
+            <li><a href="#">Fun Page</a>
+              <!--<ul>
+                <li><a href="#">Fun Facts</a></li>
+                <li><a href="#">Soundbites</a></li>
+                <li><a href="#">Trivia</a></li>
+              </ul>-->
+            </li>
+            <li><a href="#">Gallery</a></li>
           </ul>
-        </li>
-        <li><a href="#">Gallery</a></li>
-      </ul>
+        </nav>
+      </div>
     </div>
-  </nav>
+  </header>
   
   <div id="bigMap">
     <h1>big map</h1>
