--- a/index.html
+++ b/index.html
@@ -16,13 +16,25 @@
 <body>
 
   <header>
+    <!--<nav class="mobile-navigation">
+      <a class="navbar-burger is-active">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a>Fun Page</a></li>
+        <li><a>Photo Gallery</a></li>
+      </ul>
+    </nav>-->
     <div class="header__container">
       <a class="navbar-burger">
         <span></span>
         <span></span>
         <span></span>
       </a>
-      <a class="header__logo">
+      <a class="header__logo" href="index.html">
         <img class="logo__image" src="assets/images/logo.png">
         <div class="logo__text">ISS <br>Locator</div>
       </a>
@@ -48,6 +60,27 @@
   </div>
   <div id="data">
     <h4>data</h4>
+  </div>
+
+  <div class="container">
+
+    <div class="main-content">
+
+      <section class="information section-normal">
+        <h2 class="h2-section">Information</h1>
+      </section>
+
+      <section class="about section-normal">
+        <h1 class="h1-section">About</h1>
+        <p>Test paragraph</p>
+      </section>
+        
+      <section class="photo-gallery section-normal">
+        <h1 class="h1-section">Photo Gallery</h1>
+      </section>
+
+    </div>
+
   </div>
 
 </body>
