Add latitude and longitude to information

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       <section class="information section-normal">
         <h2 class="h2-section">Information</h1>
         <div class="information__content">
+          <div class="information__label">Latitude</div>
+          <div class="information__data" id="latitude"></div>
+          <div class="information__label">Longitude</div>
+          <div class="information__data" id="longitude"></div>
           <div class="information__label">Astronaut Count</div>
           <div class="information__data" id="spacepeeps"></div>
           <div class="information__label">Current Crew</div>
