--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-   <!-- Leaflet CSS and JS Library -->
-   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
-   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-   <script src="script/leaflet-tilelayer-colorfilter.min.js"></script>
+  <!-- Leaflet CSS and JS Library -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+  <script src="script/leaflet-tilelayer-colorfilter.min.js"></script>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a>Fun Page</a></li>
-        <li><a>Photo Gallery</a></li>
+        <li><a href="gallery.html">Photo Gallery</a></li>
       </ul>
     </nav>
     <div class="header__container">
@@ -49,7 +49,7 @@
         <nav>
           <ul>
             <li><a href="#">Fun Page</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </nav>
       </div>
