--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a>Fun Page</a></li>
+        <li><a href="fun.html">Fun Page</a></li>
         <li><a href="gallery.html">Photo Gallery</a></li>
       </ul>
     </nav>
@@ -48,7 +48,7 @@
       <div class="is-hidden-touch">
         <nav>
           <ul>
-            <li><a href="#">Fun Page</a></li>
+            <li><a href="fun.html">Fun Page</a></li>
             <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </nav>
@@ -86,6 +86,18 @@
           <p>This website will always be dynamically updated with the current position of the International Space Station along with the current crew aboard.</p>
           <p>The ISS is orbiting the Earth is one of many reasons why the Earth couldn't be flat, but check out our <a href="">Fun Page</a> on everything NASA and flat-earth related.</p>
         </section>
+
+        <section class="fun-fact section-normal">
+          <h2 class="h1-section">Fun Facts</h2>
+          <button class="factButton button-main">ISS Fun Fact List</button>
+          <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p class="modal-append"></p>
+            </div>
+          </div>
+          <script src="script/articlesFacts.js"></script>
+        </section>
           
         <section class="photo-gallery section-normal">
           <h1 class="h1-section">Photo Gallery</h1>
@@ -102,19 +114,7 @@
         </section>
 
       </div>
-<!--
-      <section class="section-normal">
-          <h2 class="h2-section">Fun Fact</h2>
-          <button class="factButton">Open Modal</button>
-          <div id="myModal" class="modal">
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p class="modal-append"></p>
-            </div>
-          </div>
-          <script src="script/script.js"></script>
-      </section>
-    -->
+    
     </div>
 
   </div>
