Fix article generation

--- a/fun.html
+++ b/fun.html
@@ -74,7 +74,7 @@
         <h2 class="h1-section">Articles</h2>
         <p class="artinfo"></p>
         <button class="test button-main">Generate Flat Earth Article</button>
-        <button class="test button-main">Generate NASA Article</button>
+        <button class="space button-main">Generate ISS Article</button>
         <button class="readmore button-main">Read More...</button>
       </section>
 
