Fix about section in index.html

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
         <section class="about section-normal">
           <h1 class="h1-section">About</h1>
-          <p>Tired of your flat earther friends complaining about the Earth not being round? Have you wanted to see information about the International Space Station in one place? Welcome to the International Space Station Locator where you can get all of that.</p>
+          <p>Tired of your flat earther friends complaining about the Earth not being round? Have you wanted to see information about the International Space Station in one place? Welcome to the International Space Station Locator where you can get all of your round-earth proving and ISS information needs.</p>
           <p>This website will always be dynamically updated with the current position of the International Space Station along with the current crew aboard.</p>
-          <p>The ISS is orbiting the Earth is one of many reasons why the Earth couldn't be flat, but check out our <a href="">Fun Page</a> on everything NASA and flat-earth related.</p>
+          <p>The ISS orbiting the Earth is one of many reasons why the Earth couldn't be flat, but check out our <a href="">Fun Page</a> on everything NASA and flat-earth related.</p>
         </section>
 
         <section class="fun-fact section-normal">
